V2.2
 - date interval query has been changed
 - added the "expenses" function; can register, get and delete expenses that can be deductible or not. Deductible expenses will be substracted from the profits
 - removed the yaml swagger file
 - fixed a bug where clients that were not "fiscal" could not be submitted
 - replaced the DatePicker dependency with a simple html input type="date"
 - modifications to the Financial component
